put  the Name and SID in main.tex

--- a/INFO1111_2025_SKILLS_PROJECT/main.tex
+++ b/INFO1111_2025_SKILLS_PROJECT/main.tex
@@ -39,14 +39,14 @@
 % e.g. \newcommand{\stud1}{LOWE, David}
 \newcommand{\studA}{{FAMNAME1, givenName1}}
 \newcommand{\studB}{{FAMNAME2, givenName2}}
-\newcommand{\studC}{{FAMNAME3, givenName3}}
+\newcommand{\studC}{{Chen, Yang}}
 \newcommand{\studD}{{FAMNAME4, givenName4}}
 % ADD ANOTHER LINE FOR A FIFTH MEMBER
 %
 % IMPORTANT - Then give your SIDs
 \newcommand{\sidA}{{01234567}}
 \newcommand{\sidB}{{01234567}}
-\newcommand{\sidC}{{01234567}}
+\newcommand{\sidC}{{540065552}}
 \newcommand{\sidD}{{01234567}}
 % ADD ANOTHER LINE FOR A FIFTH MEMBER
 
