--- a/INFO1111_2025_SKILLS_PROJECT/main.tex
+++ b/INFO1111_2025_SKILLS_PROJECT/main.tex
@@ -38,14 +38,14 @@
 % IMPORTANT - Add student names here!
 % e.g. \newcommand{\stud1}{LOWE, David}
 \newcommand{\studA}{{FAMNAME1, givenName1}}
-\newcommand{\studB}{{FAMNAME2, givenName2}}
+\newcommand{\studB}{{Lekovic, Morgan}}
 \newcommand{\studC}{{Chen, Yang}}
 \newcommand{\studD}{{FAMNAME4, givenName4}}
 % ADD ANOTHER LINE FOR A FIFTH MEMBER
 %
 % IMPORTANT - Then give your SIDs
 \newcommand{\sidA}{{01234567}}
-\newcommand{\sidB}{{01234567}}
+\newcommand{\sidB}{{520443860}}
 \newcommand{\sidC}{{540065552}}
 \newcommand{\sidD}{{01234567}}
 % ADD ANOTHER LINE FOR A FIFTH MEMBER
