--- a/INFO1111_2025_SKILLS_PROJECT/main.bib
+++ b/INFO1111_2025_SKILLS_PROJECT/main.bib
@@ -15,4 +15,18 @@
 	title = "The global skills and competency framework for the digital world",
 	year = 2022,
 	note = "See \url{https://sfia-online.org/en/sfia-8/all-skills-a-z}"}
-	
+
+@web1{sfia_DA,
+  author = "{SFIA}",
+  title = "Data analytics",
+  year = 2024,
+  note = "See \url{https://sfia-online.org/en/sfia-9/skills/data-analytics}"
+}
+
+@web2{sfia_DE,
+  author = "{SFIA}",
+  title = "Data Engineering",
+  year = 2024,
+  note = "See \url{https://sfia-online.org/en/sfia-9/skills/data-engineering}"
+}
+
