Added name to LaTeX file
Added my name and compiled

--- a/INFO1111_2025_SKILLS_PROJECT/main.tex
+++ b/INFO1111_2025_SKILLS_PROJECT/main.tex
@@ -23,7 +23,6 @@
 \setlength{\cftsecnumwidth}{2em}
 \setlength{\cftsubsecnumwidth}{2.5em}
 
-
 \begin{document}
 \titleformat{\section}
 {\normalfont\fontsize{15}{0}\bfseries}{\thesection}{1em}{}
@@ -40,14 +39,14 @@
 \newcommand{\studA}{{FAMNAME1, givenName1}}
 \newcommand{\studB}{{Lekovic, Morgan}}
 \newcommand{\studC}{{Chen, Yang}}
-\newcommand{\studD}{{FAMNAME4, givenName4}}
+\newcommand{\studD}{{Walker, Blake}}
 % ADD ANOTHER LINE FOR A FIFTH MEMBER
 %
 % IMPORTANT - Then give your SIDs
 \newcommand{\sidA}{{01234567}}
 \newcommand{\sidB}{{520443860}}
 \newcommand{\sidC}{{540065552}}
-\newcommand{\sidD}{{01234567}}
+\newcommand{\sidD}{{550722375}}
 % ADD ANOTHER LINE FOR A FIFTH MEMBER
 
 %
@@ -73,7 +72,7 @@
 \textbf{\huge Skills: Team Project Report}\\[2cm]
 
 \textbf{\large Submission number: ?? Add your details}\\[0.5cm]
-\textbf{\large Github link: ?? Add your details}\\[0.75cm]
+\textbf{\large Github link: WILL ADD LATER}\\[0.75cm]
 \textbf{\huge Team Members:}\\[0.75cm]
 
 \begin{tabular}{|p{0.25\textwidth}|p{0.13\textwidth}|p{0.12\textwidth}|p{0.12\textwidth}|p{0.22\textwidth}|}
