--- a/INFO1111_2025_SKILLS_PROJECT/main.tex
+++ b/INFO1111_2025_SKILLS_PROJECT/main.tex
@@ -38,7 +38,7 @@
 % e.g. \newcommand{\stud1}{LOWE, David}
 \newcommand{\studA}{{FAMNAME1, givenName1}}
 \newcommand{\studB}{{Lekovic, Morgan}}
-\newcommand{\studC}{{Chen, Yang}}
+\newcommand{\studC}{{Chen, YANG}}
 \newcommand{\studD}{{Walker, Blake}}
 % ADD ANOTHER LINE FOR A FIFTH MEMBER
 %
